# nemoize

./: README.md  pyproject.toml
benchmark/: benchmark.py
src/: memoize.py
src/nemoize/: __init__.py  memoize.py
test/unit/: test_memoize.py
